fix require param

--- a/reference/IS-SN-importexport.yaml
+++ b/reference/IS-SN-importexport.yaml
@@ -3,7 +3,7 @@ x-stoplight:
   id: 91a4ao3uk9mo3
 info:
   title: Import export Selfnet
-  version: 0.2.13
+  version: 0.2.14
   description: |
     # Selfnet Import Export api documentation
 
@@ -385,6 +385,48 @@ paths:
           application/json:
             schema:
               type: object
+              x-examples:
+                Example 1:
+                  supplier_code: '0001'
+                  customers:
+                    - code: CUST123
+                      name: John Doe
+                      address: 334 Main Street
+                      city: New York
+                      zip_code: '10001'
+                      province: NY
+                      phone_number: +1 555-123-4567
+                      email: johndoe@example.com
+                      pec: johndoe@pecmail.com
+                      notes: VIP customer
+                      vat_number: US123456789
+                      fiscal_code: DOEJHN80A01F205X
+                      is_enabled: true
+                      payment_mode_code: MP02
+                      payment_periodicity_code: 'N'
+                      payment_terms_code: '003'
+                      max_period_credit: 10000
+                      period_debit: 2500
+                      exposure: 7500
+                      has_km_request: false
+                      has_km_check: true
+                      has_driver_request: false
+                      has_driver_check: true
+                      has_account_balance: true
+                      has_invoice: false
+                      notify_recharge: true
+                      notify: false
+                      notify1: true
+                      notify2: false
+                      notify3: true
+                      has_customer_recharge: false
+                      country_code: IT
+                      sdi_code: null
+                      electronic_invoice: true
+                      oil_iban: US12345678912345678901
+                      non_oil_iban: US98765432109876543210
+                      vat_code: '001'
+                      total_recharge: 1500
               properties:
                 supplier_code:
                   type: string
@@ -469,48 +511,10 @@ paths:
                         type: string
                       total_recharge:
                         type: integer
-              x-examples:
-                Example 1:
-                  supplier_code: '0001'
-                  customers:
-                    - code: CUST123
-                      name: John Doe
-                      address: 334 Main Street
-                      city: New York
-                      zip_code: '10001'
-                      province: NY
-                      phone_number: +1 555-123-4567
-                      email: johndoe@example.com
-                      pec: johndoe@pecmail.com
-                      notes: VIP customer
-                      vat_number: US123456789
-                      fiscal_code: DOEJHN80A01F205X
-                      is_enabled: true
-                      payment_mode_code: MP02
-                      payment_periodicity_code: 'N'
-                      payment_terms_code: '003'
-                      max_period_credit: 10000
-                      period_debit: 2500
-                      exposure: 7500
-                      has_km_request: false
-                      has_km_check: true
-                      has_driver_request: false
-                      has_driver_check: true
-                      has_account_balance: true
-                      has_invoice: false
-                      notify_recharge: true
-                      notify: false
-                      notify1: true
-                      notify2: false
-                      notify3: true
-                      has_customer_recharge: false
-                      country_code: IT
-                      sdi_code: null
-                      electronic_invoice: true
-                      oil_iban: US12345678912345678901
-                      non_oil_iban: US98765432109876543210
-                      vat_code: '001'
-                      total_recharge: 1500
+                    required:
+                      - code
+              required:
+                - supplier_code
             examples:
               Example 1:
                 value:
